New Resource: `azurerm_logic_app_workflow`
Tests pass:

```
$ acctests azurerm TestAccAzureRMLogicAppWorkflow_
=== RUN   TestAccAzureRMLogicAppWorkflow_empty
--- PASS: TestAccAzureRMLogicAppWorkflow_empty (97.38s)
=== RUN   TestAccAzureRMLogicAppWorkflow_tags
--- PASS: TestAccAzureRMLogicAppWorkflow_tags (83.56s)
=== RUN   TestAccAzureRMLogicAppWorkflow_actionHTTP
--- PASS: TestAccAzureRMLogicAppWorkflow_actionHTTP (75.25s)
PASS
ok      github.com/terraform-providers/terraform-provider-azurerm/azurerm       256.212s
```

Fixes #610

--- a/website/azurerm.erb
+++ b/website/azurerm.erb
@@ -538,7 +538,16 @@
               </ul>
             </li>
 
-            <li<%= sidebar_current("docs-azurerm-management") %>>
+            <li<%= sidebar_current("docs-azurerm-resource-logic") %>>
+              <a href="#">Logic App Resources</a>
+              <ul class="nav nav-visible">
+                <li<%= sidebar_current("docs-azurerm-resource-logic-app-workflow") %>>
+                  <a href="/docs/providers/azurerm/r/logic_app_workflow.html">azurerm_logic_app_workflow</a>
+                </li>
+              </ul>
+            </li>
+
+            <li<%= sidebar_current("docs-azurerm-resource-management") %>>
               <a href="#">Management Resources</a>
               <ul class="nav nav-visible">
                 <li<%= sidebar_current("docs-azurerm-resource-management-lock") %>>
