New Resources: `azurerm_logic_app_trigger_http_request` / `azurerm_logic_app_trigger_recurrence`
- Adding documentation for all of the resources
- Making the test check functions more generic

--- a/website/azurerm.erb
+++ b/website/azurerm.erb
@@ -211,7 +211,7 @@
               </ul>
             </li>
 
-            <li<%= sidebar_current("docs-azurerm-resource-role") %>>
+            <li<%= sidebar_current("docs-azurerm-resource-authorization") %>>
               <a href="#">Authorization Resources</a>
               <ul class="nav nav-visible">
 
@@ -541,9 +541,23 @@
             <li<%= sidebar_current("docs-azurerm-resource-logic") %>>
               <a href="#">Logic App Resources</a>
               <ul class="nav nav-visible">
+
+                <li<%= sidebar_current("docs-azurerm-resource-logic-app-action-http") %>>
+                  <a href="/docs/providers/azurerm/r/logic_app_action_http.html">azurerm_logic_app_action_http</a>
+                </li>
+
+                <li<%= sidebar_current("docs-azurerm-resource-logic-app-trigger-http-request") %>>
+                  <a href="/docs/providers/azurerm/r/logic_app_trigger_http_request.html">azurerm_logic_app_trigger_http_request</a>
+                </li>
+
+                <li<%= sidebar_current("docs-azurerm-resource-logic-app-trigger-recurrence") %>>
+                  <a href="/docs/providers/azurerm/r/logic_app_trigger_recurrence.html">azurerm_logic_app_trigger_recurrence</a>
+                </li>
+
                 <li<%= sidebar_current("docs-azurerm-resource-logic-app-workflow") %>>
                   <a href="/docs/providers/azurerm/r/logic_app_workflow.html">azurerm_logic_app_workflow</a>
                 </li>
+
               </ul>
             </li>
 
