New Resource: `azurerm_logic_app_trigger_custom`

--- a/website/azurerm.erb
+++ b/website/azurerm.erb
@@ -542,8 +542,16 @@
               <a href="#">Logic App Resources</a>
               <ul class="nav nav-visible">
 
+                <li<%= sidebar_current("docs-azurerm-resource-logic-app-action-custom") %>>
+                  <a href="/docs/providers/azurerm/r/logic_app_action_custom.html">azurerm_logic_app_action_custom</a>
+                </li>
+
                 <li<%= sidebar_current("docs-azurerm-resource-logic-app-action-http") %>>
                   <a href="/docs/providers/azurerm/r/logic_app_action_http.html">azurerm_logic_app_action_http</a>
+                </li>
+
+                <li<%= sidebar_current("docs-azurerm-resource-logic-app-trigger-custom") %>>
+                  <a href="/docs/providers/azurerm/r/logic_app_trigger_custom.html">azurerm_logic_app_trigger_custom</a>
                 </li>
 
                 <li<%= sidebar_current("docs-azurerm-resource-logic-app-trigger-http-request") %>>
