New Data Source: `azurerm_logic_app_workflow`
```
$ acctests azurerm TestAccDataSourceAzureRMLogicAppWorkflow_
=== RUN   TestAccDataSourceAzureRMLogicAppWorkflow_basic
--- PASS: TestAccDataSourceAzureRMLogicAppWorkflow_basic (69.73s)
=== RUN   TestAccDataSourceAzureRMLogicAppWorkflow_tags
--- PASS: TestAccDataSourceAzureRMLogicAppWorkflow_tags (67.28s)
PASS
ok  	github.com/terraform-providers/terraform-provider-azurerm/azurerm	137.042s
```

--- a/website/azurerm.erb
+++ b/website/azurerm.erb
@@ -91,7 +91,11 @@
                 <li<%= sidebar_current("docs-azurerm-data-source-kubernetes-cluster") %>>
                     <a href="/docs/providers/azurerm/d/kubernetes_cluster.html">azurerm_kubernetes_cluster</a>
                 </li>
-                
+
+                <li<%= sidebar_current("docs-azurerm-data-source-logic-app-workflow") %>>
+                    <a href="/docs/providers/azurerm/d/logic_app_workflow.html">azurerm_logic_app_workflow</a>
+                </li>
+
                 <li<%= sidebar_current("docs-azurerm-datasource-managed-disk") %>>
                     <a href="/docs/providers/azurerm/d/managed_disk.html">azurerm_managed_disk</a>
                 </li>
@@ -619,7 +623,7 @@
 
                 <li<%= sidebar_current("docs-azurerm-resource-servicebus-queue") %>>
                   <a href="/docs/providers/azurerm/r/servicebus_queue.html">azurerm_servicebus_queue</a>
-                </li>               
+                </li>
 
                 <li<%= sidebar_current("docs-azurerm-resource-servicebus-subscription") %>>
                   <a href="/docs/providers/azurerm/r/servicebus_subscription.html">azurerm_servicebus_subscription</a>
