New Resource: `azurerm_azuread_service_principal`
Tests pass:

```
$ acctests azurerm TestAccAzureRMActiveDirectoryServicePrincipal_

=== RUN   TestAccAzureRMActiveDirectoryServicePrincipal_importBasic
--- PASS: TestAccAzureRMActiveDirectoryServicePrincipal_importBasic (24.04s)
=== RUN   TestAccAzureRMActiveDirectoryServicePrincipal_basic
--- PASS: TestAccAzureRMActiveDirectoryServicePrincipal_basic (17.61s)
PASS
ok  	github.com/terraform-providers/terraform-provider-azurerm/azurerm	41.701s
```

--- a/website/azurerm.erb
+++ b/website/azurerm.erb
@@ -232,6 +232,9 @@
                 <li<%= sidebar_current("docs-azurerm-resource-azuread-application") %>>
                   <a href="/docs/providers/azurerm/r/azuread_application.html">azurerm_azuread_application</a>
                 </li>
+                <li<%= sidebar_current("docs-azurerm-resource-azuread-service-principal") %>>
+                  <a href="/docs/providers/azurerm/r/azuread_service_principal.html">azurerm_azuread_service_principal</a>
+                </li>
               </ul>
             </li>
 
